--- a/js/GraphQL/FE/package.json
+++ b/js/GraphQL/FE/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-node",
+  "name": "graphql-fe",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,12 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.4",
-    "express-graphql": "^0.7.1",
-    "graphql": "^14.0.2"
-  },
   "devDependencies": {
-    "nodemon": "^1.18.7"
+    "create-react-app": "^2.1.1"
   }
 }
