--- a/js/TypeScript/package.json
+++ b/js/TypeScript/package.json
@@ -11,18 +11,20 @@
     "@babel/polyfill": "^7.0.0",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^6.0.11",
     "autoprefixer": "^9.4.3",
     "axios": "^0.17.1",
     "chalk": "^2.4.1",
     "prop-types": "^15.6.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.4.2",
+    "redux-saga": "^0.16.2",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.79.1",
     "styled-components": "^3.2.5"
