--- a/js/TypeScript/tsconfig.json
+++ b/js/TypeScript/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "strictNullChecks": true,
-    "jsx": "react"
+    "jsx": "react",
+    //"lib": ["es6"]
+    "target": "es6",
+    "module": "commonjs",
   },
   "exclude": [
     "node_modules"
