--- a/js/GraphQL/BE/package.json
+++ b/js/GraphQL/BE/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "set BABEL_DISABLE_CACHE=1 && nodemon --exec babel-node ./index.js",
-    "start2": "set BABEL_DISABLE_CACHE=1 &&  babel-node ./index.js"
+    "start": "nodemon --ext js,ts,json --exec ts-node ./index.ts",
+    "start2": "set BABEL_DISABLE_CACHE=1 && nodemon --exec babel-node ./index.js",
+    "start3": "set BABEL_DISABLE_CACHE=1 &&  babel-node ./index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.0.0-rc.1",
+    "@types/node": "^11.13.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
@@ -21,6 +24,8 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "babel-plugin-inline-import": "^3.0.0",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "ts-node": "^8.0.3",
+    "typescript": "^3.4.3"
   }
 }
